--- a/src/scss/helpers.module.scss
+++ b/src/scss/helpers.module.scss
@@ -293,10 +293,21 @@
 
 // **
 .skeleton {
+  position: relative;
   display: block;
   border-radius: rem(4);
-  background-color: var(--skeleton-color);
-  animation: var(--skeleton-animation);
+  background-color: var(--light-color);
   pointer-events: none;
   user-select: none;
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, #ccca 40%, #fffa, #ccca 60%) right/300% 100%;
+    animation: var(--skeleton-animation);
+  }
 }
