--- a/src/scss/helpers.module.scss
+++ b/src/scss/helpers.module.scss
@@ -67,73 +67,6 @@
   // }
 }
 
-.btn {
-  display: inline-block;
-  border: rem(1) solid var(--yellow-color);
-  padding-top: rem(17);
-  padding-bottom: rem(15);
-  padding-inline: rem(48);
-  font: var(--btn-font);
-  color: var(--black-color);
-  background-color: var(--yellow-color);
-  transition: opacity 0.3s;
-  cursor: pointer;
-
-  &:disabled {
-    opacity: 0.8;
-    pointer-events: none;
-  }
-
-  &Message {
-    display: none;
-    margin-top: rem(5);
-    font: var(--validation-font);
-    line-height: 100%;
-    text-align: left;
-    color: var(--danger-color);
-  }
-
-  &Wrapper {
-    position: relative;
-
-    // **
-    &[data-auth-message] {
-      .btnMessage {
-        display: block;
-        color: var(--danger-color);
-      }
-    }
-
-    // **
-    &[data-request-success] {
-      .btnMessage {
-        display: block;
-        color: var(--success-color);
-      }
-    }
-
-    &[data-request-warning] {
-      .btnMessage {
-        display: block;
-        color: var(--danger-color);
-      }
-    }
-
-    &[data-request-process] {
-      .btnMessage {
-        display: block;
-        color: var(--black-color);
-      }
-    }
-  }
-
-  &:hover {
-    border: rem(1) solid var(--yellow-hover-color);
-    background-color: var(--yellow-hover-color);
-    transition: background-color 0.3s;
-  }
-}
-
 // **
 .input {
   outline: none;
@@ -214,6 +147,151 @@
   }
 }
 
+.btn {
+  display: inline-block;
+  border: rem(1) solid var(--yellow-color);
+  padding-top: rem(17);
+  padding-bottom: rem(15);
+  padding-inline: rem(48);
+  font: var(--btn-font);
+  color: var(--black-color);
+  background-color: var(--yellow-color);
+  transition: opacity 0.3s;
+  cursor: pointer;
+
+  &:disabled {
+    opacity: 0.8;
+    pointer-events: none;
+  }
+
+  &Message {
+    @extend .inputMessage;
+  }
+
+  &Wrapper {
+    position: relative;
+
+    // **
+    &[data-auth-message] {
+      .btnMessage {
+        display: block;
+        color: var(--danger-color);
+      }
+    }
+
+    // **
+    &[data-request-success] {
+      .btnMessage {
+        display: block;
+        color: var(--success-color);
+      }
+    }
+
+    &[data-request-warning] {
+      .btnMessage {
+        display: block;
+        color: var(--danger-color);
+      }
+    }
+
+    &[data-request-process] {
+      .btnMessage {
+        display: block;
+        color: var(--black-color);
+      }
+    }
+  }
+
+  &:hover {
+    border: rem(1) solid var(--yellow-hover-color);
+    background-color: var(--yellow-hover-color);
+    transition: background-color 0.3s;
+  }
+}
+
+.checkbox {
+  display: inline-flex;
+  flex-shrink: 0;
+  align-items: center;
+  justify-content: center;
+  outline: none;
+  border: rem(1) solid var(--mediumgray-color);
+  border-radius: rem(3);
+  width: rem(16);
+  height: rem(16);
+  background-color: transparent;
+  transition: border-color 0.3s, background-color 0.3s;
+  cursor: pointer;
+  user-select: none;
+
+  svg {
+    width: rem(14);
+    height: rem(14);
+    stroke: var(--black-color);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.2s;
+  }
+
+  &Message {
+    @extend .inputMessage;
+  }
+
+  &Wrapper {
+    text-align: left;
+
+    &Active {
+      text-align: left;
+
+      // .checkbox {
+      //   border-color: var(--danger-color);
+      // }
+
+      // .checkboxWrapperInner {
+      //   position: relative;
+
+      //   >.checkbox {
+      //     border-color: var(--danger-color);
+      //   }
+      // }
+
+      >.checkboxMessage {
+        display: block;
+      }
+    }
+  }
+
+  &Label {
+    font: var(--body01-font);
+    word-break: break-all;
+  }
+
+  &Checked {
+    border-color: var(--mediumgray-color);
+
+    svg {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+
+  &:hover {
+    border-color: var(--purple-color);
+
+    svg {
+      stroke: var(--purple-color);
+    }
+  }
+
+  &:focus {
+    border-color: var(--black-color);
+
+    svg {
+      stroke: var(--black-color);
+    }
+  }
+}
+
 // **
 .select {
   position: relative;
@@ -245,14 +323,12 @@
   }
 
   &Wrapper {
-    // box-shadow: var(--small-shadow);
     position: absolute;
     left: rem(-1);
     top: calc(100% + rem(4));
     z-index: var(--z-postup);
     border: rem(1) solid var(--mediumgray-color);
     border-radius: rem(4);
-    padding-right: rem(10); // Для каст. скроллбара
     width: calc(100% + rem(2));
     background-color: var(--light-color);
     opacity: 0;
@@ -271,22 +347,29 @@
     overflow: auto;
     margin: 0;
     padding: 0;
-    max-height: rem(160);
+    padding-block: rem(10);
     background-color: var(--light-color);
   }
 
   &Item {
-    padding-block: rem(2);
+    outline: none;
+    border: none;
+    padding-block: rem(4);
     color: var(--black-color);
     transition: color 0.3s;
     cursor: pointer;
 
     &:hover {
-      color: var(--purple-color);
+      background-color: var(--yellow-hover060-color);
+    }
+
+    &:focus {
+      border: none;
+      background-color: var(--yellow-hover060-color);
     }
 
     &Active {
-      color: var(--mediumgray-color);
+      background-color: var(--yellow-color);
     }
   }
 }
